@@ -9,7 +9,7 @@
   <configure name="NAME" value="ImageMagick"/>
   <configure name="LIB_VERSION" value="0x660"/>
   <configure name="LIB_VERSION_NUMBER" value="6,6,0,6"/>
-  <configure name="RELEASE_DATE" value="2010-03-12"/>
+  <configure name="RELEASE_DATE" value="2010-03-15"/>
   <configure name="CONFIGURE" value="./configure "/>
   <configure name="PREFIX" value="/usr/local"/>
   <configure name="EXEC-PREFIX" value="/usr/local"/>
